# wiki-search-rs

./: .gitignore  Cargo.toml  README.md
src/: common.rs  index_engine.rs  main.rs  query.rs
src/index_engine/: index_builder.rs  index_engine.rs  mod.rs  snippet_engine.rs
