[package]
name = "wiki-search-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bzip2 = "0.4.4"
clap = { version = "4.4.8", features = ["derive"] }
rust-stemmers = "1.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
xml-rs = "0.8.19"
